[tool.poetry]
name = "taskscheduling"
version = "0.1.0"
description = ""
authors = ["piasekj <piasekj1602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.1"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
